--- a/核酸检测注意事项.md
+++ b/核酸检测注意事项.md
@@ -1,16 +1,17 @@
 # 核酸检测注意事项：
 
-1 如有感觉不适的，可以先做一次抗原，如果🐑就别去了（立即上报）
+## 1 如有感觉不适的，可以先做一次抗原，如果🐑就别去了（立即上报）
 
-2 核酸检测过程注意事项
-2.1 去时全程带好口罩，装备好酒精（或酒精湿巾），以备检测途中使用；
-2.2 进入**号门洞前，酒精消杀鞋底，其他不放心处喷酒精消杀（拿着酒精瓶喷一下，可以两人互喷）；
-2.3 进入各自房间时门把手、手部、钥匙喷一下再开门，进门后立即洗手，口罩消杀后弃用，如采样时口唇接触采样人员手部可用酒精湿巾及时擦拭（如没有酒精湿巾，建议75%酒精喷湿抽纸一张自制酒精湿巾解决）。
+## 2 核酸检测过程注意事项
++ 去时全程带好口罩，装备好酒精（或酒精湿巾），以备检测途中使用；
++ 进入**号门洞前，酒精消杀鞋底，其他不放心处喷酒精消杀（拿着酒精瓶喷一下，可以两人互喷）；
++ 进入各自房间时门把手、手部、钥匙喷一下再开门，进门后立即洗手，口罩消杀后弃用，如采样时口唇接触采样人员手部可用酒精湿巾及时擦拭（如没有酒精湿巾，建议75%酒精喷湿抽纸一张自制酒精湿巾解决）。
 
-3 室内所有人回来后，进行一次室内消杀（重点：地面和大家回来新接触过的物品，请不要聚集进行）。
+## 3 室内所有人回来后，进行一次室内消杀（重点：地面和大家回来新接触过的物品，请不要聚集进行）。
 
-！！！只有人人安全大家才安全，若有一人隐患大家都不安全；共建防疫屏障，保护你我他！！！
+### ！！！只有人人安全大家才安全，若有一人隐患大家都不安全；共建防疫屏障，保护你我他！！！
 
-作者：抗疫斗士
-时间：2022年4月上海疫灾严峻期
-地点：上海浦东新区张江镇建中路126弄
+
+作者：抗疫斗士</br>
+时间：2022年4月上海疫灾严峻期</br>
+地点：上海浦东新区张江镇建中路126弄</br>
